adjust line height to avoid cut off headlines

--- a/src/styles.css
+++ b/src/styles.css
@@ -95,18 +95,17 @@
 
 #styla-widget .styla-widget__headlinewrap
 {
-    height:                             4.25em;
-    padding-top:                        0.25em;
+    height:                             5em;
     display:                            flex;
     flex-direction:                     column;
-    justify-content:                    center;
+    justify-content:                    flex-end;
 }
 
 #styla-widget .styla-widget__headline
 {
     font-size:                          1.9em;
-    line-height:                        1em;
-    max-height:                         2em;
+    line-height:                        1.2em;
+    max-height:                         2.4em;
     overflow:                           hidden;
     margin:                             0;
     margin-bottom:                      0.25em;
